# env-logger

./: .gitignore  .travis.yml  Containerfile  Dockerfile  LICENSE  Makefile  README.md  add_user.py  ble_beacon_scan.c  build.clj  db-def.sql  db_backup.sh  db_docker_backup.sh  deps.edn  influxdb_backup.sh  justfile  local_db_update.sh  logger.py  logger_requirements.txt  package-lock.json  package.json  project.clj  ruff.toml  table-def.sql  tempserver.ino  testbed_image.py  testbed_image.sh  tests.edn  wioterminal.ino
.circleci/: config.yml
electricity-consumption/: Containerfile  Dockerfile  Makefile  README.md  justfile  pyproject.toml  store_consumption.py
electricity-consumption/electricity_consumption/: __init__.py  config.json.sample  store_consumption.py
electricity-price/: Containerfile  Dockerfile  Makefile  README.md  config.json.sample  justfile  pyproject.toml  store_price.py
electricity_price/: Dockerfile  Makefile  Pipfile  README.md  config.json.sample  store_price.py
electricity_price/spot_price/: scrapy.cfg
electricity_price/spot_price/spot_price/: items.py  middlewares.py  pipelines.py  settings.py
electricity_price/spot_price/spot_price/spiders/: spotpricespider.py
logger/: .gitignore  Makefile  Pipfile  README.md  ble_beacon_scan.c  check_bt_device.sh  logger.py  logger_config.json.sample  logger_config.json_sample  logger_config.toml.sample  logger_influx.py  logger_influx_config_sample.json  pyproject.toml  requirements.txt  rt_scan.py
obs_monitor/: .gitignore  Containerfile  Dockerfile  Makefile  Pipfile  justfile  monitor.cfg_sample  monitor.py  pyproject.toml  requirements.txt
pyportal/: README.md  code.py  ruff.toml  secrets_template.py  settings.toml.sample
resources/: config.edn  config.edn_sample
resources/js/: plots.js
scripts/: .gitignore  Pipfile  add_user.py  backup_conf.sh_sample  db_backup.sh  fix_weather_timestamp_errors.py  influxdb_backup.sh  influxdb_to_postgres.py  kube_db_backup  local_db_restore.sh  local_db_update.sh  verification.sh
src/env_logger/: authentication.clj  config.clj  db.clj  electricity.clj  grabber.clj  handler.clj  main.clj  owm.clj  render.clj  ruuvitag.clj  user.clj  util.clj  utils.clj  weather.clj
src/public/js/: auth-load.js  auth.js  chart.js  charts.js  login.js  plots.js  profiles.js  register.js
src/templates/: chart.html  elec-consumption-upload.html  elec-usage-upload.html  error.html  index.html  login.html  logout.html  plots.html  register.html
tempserver/: tempserver.ino
test/env_logger/: authentication_test.clj  config_test.clj  db_test.clj  elec_consumption_ok.csv  elec_usage_invalid.csv  elec_usage_ok.csv  elec_usage_short.csv  electricity_test.clj  grabber_test.clj  handler_test.clj  owm_test.clj  render_test.clj  ruuvitag_test.clj  test_db.clj  user_test.clj  weather_test.clj  wfs_data.txt  wfs_data_wd.txt  wfs_extraction_data.txt  wfs_extraction_data_invalid.txt  wfs_forecast_data.txt
testbed_image/: .gitignore  Pipfile  pyproject.toml  requirements.txt  testbed_image.py  testbed_image.sh  testbed_image_conf.sh.sample  testbed_image_migrate.py
wioterminal/: wioterminal.ino
xiao_esp32c3/: .gitignore  xiao_esp32c3.ino
xiao_esp32s3/: xiao_esp32s3.ino
yardcam/: .gitignore  README.md  take_image.sh  take_image_conf.sh.sample
