[project]
name = "electricity-consumption"
version = "0.1.0"
description = "Electricity consumption data fetcher"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2.3",
    "pycaruna>=1.0.3",
]

[tool.ruff]
lint.select = ["A", "B", "D", "E", "EM", "F", "FURB", "G", "I", "LOG", "N", "PERF", "PIE", "PL", "PTH", "SIM", "RET", "RUF", "S", "TRY", "UP", "W"]
lint.ignore = ["D203", "D213"]
