[project]
name = "electricity-price"
version = "0.1.0"
description = "Tool for fetching electricity price"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.13"
dependencies = [
    "nordpool>=0.4.3",
    "psycopg[binary]>=3.2.3",
]

[tool.ruff]
lint.select = ["A", "B", "D", "E", "EM", "F", "G", "I", "LOG", "N", "PERF", "PIE", "PL", "PTH", "SIM", "RUF", "S", "TRY", "W"]
lint.ignore = ["D203", "D213"]
