[project]
name = "logger"
version = "0.1.0"
description = "An environment logger script"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "pytz>=2024.2",
    "requests>=2.32.3",
    "ruuvitag-sensor",
]

[tool.ruff]
lint.select = ["A", "B", "C90", "D", "E", "EM", "F", "FURB", "G", "I", "LOG", "N", "PERF", "PIE", "PL", "PTH", "RET", "RUF", "S", "SIM", "TRY", "UP", "W"]
lint.ignore = ["D203", "D213"]

[tool.uv.sources]
ruuvitag-sensor = { git = "https://github.com/ttu/ruuvitag-sensor.git" }
