[project]
name = "logger"
version = "0.1.0"
description = "An environment logger script"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "bleak>=3.0.0",
    "requests>=2.32.3",
    "ruuvitag-sensor",
]

[tool.ruff]
target-version = "py314"
lint.select = ["A", "ASYNC", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "EM", "ERA", "F", "FURB", "G", "I", "ISC", "LOG", "N", "PERF", "PIE", "PGH", "PL", "PTH", "RET", "RSE", "RUF", "S", "SIM", "T10", "TRY", "UP", "W"]
lint.ignore = ["D203", "D213"]

[tool.uv.sources]
ruuvitag-sensor = { git = "https://github.com/ttu/ruuvitag-sensor.git" }
