[project]
name = "logger"
version = "0.1.0"
description = "An environment logger script"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "bleak>=3.0.0",
    "requests>=2.32.3",
    "ruuvitag-sensor",
]

[tool.ruff]
extend = "../ruff.toml"

[tool.uv.sources]
ruuvitag-sensor = { git = "https://github.com/ttu/ruuvitag-sensor.git" }
