[project]
name = "obs-monitor"
version = "0.1.0"
description = "env-logger observation monitor"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2.3",
]

[tool.ruff]
target-version = "py314"
lint.select = ["A", "ASYNC", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "EM", "ERA", "F", "FURB", "G", "I", "ISC", "LOG", "N", "PERF", "PIE", "PGH", "PL", "PTH", "RET", "RSE", "RUF", "S", "SIM", "T10", "TRY", "UP", "W"]
lint.ignore = ["D203", "D213"]
