[project]
name = "obs-monitor"
version = "0.1.0"
description = "env-logger observation monitor"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2.3",
]

[tool.ruff]
extend = "../ruff.toml"
