[project]
name = "testbed-image"
version = "0.1.0"
description = "FMI Testbed image fetcher"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "pytz>=2024.2",
    "requests>=2.32.3",
]

[tool.ruff]
lint.select = ["A", "B", "D", "E", "EM", "F", "G", "I", "LOG", "N", "PERF", "PIE", "PL", "PTH", "SIM", "RET", "RUF", "S", "TRY", "W"]
lint.ignore = ["D203", "D213"]
