[project]
name = "testbed-image"
version = "0.1.0"
description = "FMI Testbed image fetcher"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "requests>=2.32.3",
]

[tool.ruff]
extend = "../ruff.toml"
